scss/template/theme.scss
*, a, span, small, p, div{
    --font-family-primary: 'Poppins-Regular'; 
    &::-webkit-scrollbar {
        width: 10px;
    }
     
    &::-webkit-scrollbar-track {
        border-radius: 10px;
    }
     
    &::-webkit-scrollbar-thumb {
        border-radius: 10px;
        background-color: var(--_c-green-primary-lighten);
    }
}

p{
    b{
        font-family: 'Poppins-Bold';
    }
}

.container{
    max-width: 1270px;
    margin: 0 auto;
    padding: 0 10px;
    @media screen and(max-width: 1320px){
         max-width: 1024px;
    }
    @media screen and(max-width: 1080px){
        max-width: 990px;
    }
    @media screen and(max-width: 1024px){
        max-width: 767px;
    }
    
 }

.btn-primary{
    background-color: $primary-color;
    color: var(--c-white);
    font-family: 'Poppins-Bold';
    border-radius: 3px;
    padding: 10px 15px;
    display: block;
    width: auto;
    font-size: 14px;
}

.btn-primary-outline-gray{
    background-color: transparent;
    text-transform: none;
    border: 1px solid var(--c-light);
    border-radius: 3px; 
    color: $primary-color;
}


.text-primary{
    color: $primary-color;
}

.text-center{
    text-align: center;
}

.a-add-to-cart{
    max-width: 94%;
    margin: 0 auto;
    margin-bottom: 10px;
    background-color: transparent;
    color: var(--_c-dark-secondary);
    text-transform: none;
    box-shadow: none;
    border: 1px solid var(--c-light);
    border-radius: 3px; 
    font-size: 13px;
    font-family: 'Poppins-Medium';
    padding: 10px;
    font-weight: 500;
    &:hover{
        color: var(--c-white);
        background-color: var(--_c-green-primary-lighten);
        border-color: var(--_c-green-primary-lighten);
    }
}

.sf-price{
    font-family: 'Poppins-Bold';
    flex-direction: column;
    align-items: flex-start;
    height: 48px;
    &__regular{
        font-family: 'Poppins-Bold';
        font-size: 18px;
    } 
    &__old{
        color: var(--_c-dark-secondary);
        font-family: 'Poppins-Regular';
        display: block;
        font-size: 12px;
    }
    &__special{
        font-family: 'Poppins-Bold';
        color: var(--_c-orange-primary);
    }
}

.reference{
    margin: 10px 0;
    line-height: normal;
    font-size: 14px;
    color: var(--_c-gray-secondary-lighten);
}

/*.sf-rating__icon {
    --icon-color: var(--_c-orange-primary);
}*/

.stock,
.out-of-stock{
    color: var(--_c-gray-secondary-lighten);
    font-size: 12px;
    position: relative;
    &:before {
        content: '\2022';
        display: inline-block;
        font-size: 24px;
        margin-right: 4px;
        position: absolute;
        left: -12px;
        top: 0;
    }
    @media screen and (max-width: 600px) {
        line-height: 1;
        padding-left: 12px;
        &:before{
            top: -5px;
            left: 0;
        }
    }
}

.stock{
    &:before {
        color: var(--_c-green-secondary);
    }
}

.out-of-stock{
    &:before {
        color: var(--_c-red-primary);
    }
}

.m-cookie-notification{
    @media screen and (max-width: 1024px){
        display: none;
    }
}

